Remove JDK14.
It's already old :)

Closes #12847.

PiperOrigin-RevId: 352576264